; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_custom_op_execute.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_custom_op_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@CurConf = common dso_local global %struct.TYPE_4__* null, align 8
@RPC_FUN_CUSTOM_OP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @custom_op_execute(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [3 x i8*], align 16
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = sext i32 %4 to i64
  %6 = inttoptr i64 %5 to i8*
  %7 = getelementptr inbounds [3 x i8*], [3 x i8*]* %3, i64 0, i64 0
  store i8* %6, i8** %7, align 16
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @CurConf, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = load i64, i64* @RPC_FUN_CUSTOM_OP, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds [3 x i8*], [3 x i8*]* %3, i64 0, i64 0
  %16 = call i32 @RPC_CONF_FUN_START(i32 %14, i8** %15)
  ret void
}

declare dso_local i32 @RPC_CONF_FUN_START(i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
